# goal_manager

./: .gitignore  CMakeLists.txt  README.md  goal_list.txt  goal_list_test.txt  package.xml  setup.py
launch/: goal_manager.launch  test.launch
msg/: GpsGoal.msg  GpsGoalArray.msg
src/: goal_mng.py  utils.py
src/goal_manager/: aruco_handler.py  goal_mng.py  utils.py
