<?xml version="1.0"?>
<package format="2">
  <name>goal_manager</name>
  <version>0.0.0</version>
  <description>The goal_manager package</description>

  <maintainer email="loic.boileau@usherbrooke.ca">Loic Boileau</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>tf</depend>
  <depend>python-rospkg</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>move_base_msgs</depend>
  <depend>move_base</depend>
  <depend>actionlib</depend>
  <depend>actionlib_msgs</depend>
  <depend>python-geographiclib</depend>
  <depend>message_runtime</depend>

  <export>
  </export>

</package>
